--- a/mod1_solution/index.html
+++ b/mod1_solution/index.html
@@ -1,5 +1,5 @@
-<<!DOCTYPE html>
-<html ng-app="LunchCheck">
+<!DOCTYPE html>
+<html ng-app='LunchCheck'>
   <head>
     <meta charset="utf-8">
     <title>Eat For Lunch</title>
