--- a/mod1_solution/index.html
+++ b/mod1_solution/index.html
@@ -11,6 +11,8 @@
       <div>
         Please enter your lunch items:
         <input type="text" ng-model="items">
+        <br>
+        Do NOT consider and empty item, i.e., , ,
       </div>
       <div>
         <button ng-click="CheckIfTooMuch()"> Check If Too Much </button>
