--- a/mod1_solution/index.html
+++ b/mod1_solution/index.html
@@ -10,9 +10,7 @@
     <div ng-controller="LunchCheckController">
       <div>
         Please enter your lunch items:
-        <input type="text" ng-model="items">
-        <br>
-        Do NOT consider and empty item, i.e., , ,
+        <input type="text" ng-model="items"> <span>Do NOT consider an empty item</span>
       </div>
       <div>
         <button ng-click="CheckIfTooMuch()"> Check If Too Much </button>
